# fortune-first-backend/src/routes/customer.routes.js
@@ -5,7 +5,8 @@ const { requireAuth } = require('../middleware/auth.middleware');
 const { requireRole } = require('../middleware/role.middleware');
 const { getProfile, createSupportTicket, getSupportTickets } = require('../controllers/customer.controller');
 const {downloadFullReport, downloadMonthlyReport} = require('../controllers/customer.controller');
-const { submitKYC } = require('../controllers/customer.controller');
+const { submitKYC, uploadKYCDocument } = require('../controllers/customer.controller');
+const upload = require('../middleware/upload.middleware');
 
 router.use(requireAuth);
 router.use(requireRole('customer'));
@@ -18,5 +19,6 @@ router.get('/support', getSupportTickets);
 router.get('/report/full', downloadFullReport);
 router.get('/report/monthly', downloadMonthlyReport);
 router.post('/kyc', submitKYC);
+router.post('/kyc/document', upload.single('document'), uploadKYCDocument);
 
 module.exports = router;
